fixed icon layout on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -398,6 +398,11 @@
 		padding-bottom: 70px;
 	}
 }
+@media(max-width: 450px){
+	.grid-container{
+		grid-template-columns: auto auto auto;
+	}
+}
 
 @media (max-width:480px){
 	/* Main Menu Area css
